// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`a.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleA */

=====================================output=====================================
/* @providesModule IncrModuleA */

================================================================================
`;

exports[`b.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleB
   @flow
*/

var A = require('IncrModuleA');

=====================================output=====================================
/* @providesModule IncrModuleB
   @flow
*/

var A = require("IncrModuleA");

================================================================================
`;

exports[`dup_a.js 1`] = `
====================================options=====================================
parsers: ["flow"]
printWidth: 80
                                                                                | printWidth
=====================================input======================================
/* @providesModule IncrModuleA */

var x:string = 0;

=====================================output=====================================
/* @providesModule IncrModuleA */

var x: string = 0;

================================================================================
`;
